Stop buttons from being wrapped as data grows wide

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,3 +19,7 @@
 .audit.table td.negative {
   text-decoration: line-through;
 }
+
+.action-buttons {
+  white-space: nowrap;
+}
